# charmlibs

./: .gitignore  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  README.md  justfile  pyproject.toml
.docs/: conf.py  tutorial.md
.docs/.sphinx/_static/: overwrite_links.js
.docs/how-to/: design-library-api.md  design-relation-interfaces.md  index.md
.docs/reference/: general-libs.csv  interface-libs.csv  libs.yaml
.github/workflows/: ci.yaml  conventional-pr-title.yaml  dependency-review.yaml  docs.yaml  fast-lint.yaml  publish.yaml  test-interface.yaml  test-package.yaml  tests.yaml  zizmor.yaml
.scripts/: ls.py
.template/hooks/: post_gen_project.py
_charmlibs/: README.md
_docs/: conf.py
_docs/reference/: libs-non-rel-raw.csv
advanced-rollingops/: README.md  pyproject.toml
advanced-rollingops/src/charmlibs/advanced_rollingops/: __init__.py  _certificates.py  _dp_interfaces_v1.py  _etcd_rollingops.py  _etcdctl.py  _manager.py  _models.py  _relations.py  _worker.py
advanced-rollingops/tests/functional/: test_version.py
advanced-rollingops/tests/integration/: test_etcd_rolling_ops.py  test_version.py
advanced-rollingops/tests/integration/charms/: actions.yaml  common.py  pyproject.toml
advanced-rollingops/tests/integration/charms/k8s/src/: charm.py
advanced-rollingops/tests/integration/charms/machine/src/: charm.py
advanced-rollingops/tests/unit/: conftest.py  test_certificates.py  test_etcd_rollingops.py  test_etcd_rollingops_in_charm.py  test_etcdctl.py  test_models.py  test_version.py  test_version_in_charm.py
apt/: pyproject.toml
grub/: CHANGELOG.md  README.md  pyproject.toml
grub/tests/functional/: test_grub.py  test_version.py
grub/tests/integration/: test_version.py
grub/tests/unit/: test_grub.py  test_version.py  test_version_in_charm.py
interfaces/: index.json
interfaces/.package/: README.md
interfaces/certificate_transfer/: CHANGELOG.md  README.md  pyproject.toml
interfaces/gateway-metadata/: README.md  pyproject.toml
interfaces/haproxy_spoe_auth/: README.md  pyproject.toml
interfaces/haproxy_spoe_auth/interface/v0/: README.md  interface.yaml
interfaces/haproxy_spoe_auth/src/charmlibs/interfaces/haproxy_spoe_auth/: __init__.py  _spoe_auth.py
interfaces/haproxy_spoe_auth/tests/unit/: test_haproxy_spoe_auth_lib.py  test_version.py  test_version_in_charm.py
interfaces/http_endpoint/: CHANGELOG.md  README.md  pyproject.toml
interfaces/istio-ingress-config/: CHANGELOG.md  README.md  pyproject.toml
interfaces/istio-ingress-route/: README.md  pyproject.toml
interfaces/istio-metadata/: README.md  pyproject.toml
interfaces/istio-request-auth/: README.md  pyproject.toml
interfaces/istio_ingress_route/: CHANGELOG.md
interfaces/istio_request_auth/: CHANGELOG.md
interfaces/k8s_backup_target/: README.md  pyproject.toml
interfaces/otlp/: CHANGELOG.md  README.md  pyproject.toml
interfaces/service-mesh/: README.md  pyproject.toml
interfaces/service_mesh/: CHANGELOG.md
interfaces/slo/: CHANGELOG.md  README.md  pyproject.toml
interfaces/sloth/: README.md  pyproject.toml
interfaces/temporal-host-info/: CHANGELOG.md  README.md  pyproject.toml
interfaces/temporal-worker-consumer/: README.md  pyproject.toml
interfaces/tls-certificates/: CHANGELOG.md  README.md  pyproject.toml
interfaces/tracing/: CHANGELOG.md  README.md  pyproject.toml
nginx/: README.md  pyproject.toml
nginx/src/charmlibs/nginx/: __init__.py  _config.py  _nginx.py  _nginx_prometheus_exporter.py  _tls_config.py  _tracer.py  config.py  nginx.py  tls_config_mgr.py
nginx/tests/: test_nginx_units.py
nginx/tests/integration/: __init__.py  conftest.py  pack.sh  test_nginx.py
nginx/tests/integration/charms/k8s/: 20.04-charmcraft.yaml  charmcraft.yaml  pyproject.toml
nginx/tests/integration/charms/k8s/src/: charm.py
nginx/tests/unit/: conftest.py  test_container_managers.py  test_nginx_config_write.py
nginx_k8s/: CHANGELOG.md  README.md  pyproject.toml
nginx_k8s/tests/unit/: test_config.py  test_nginx_prometheus_exporter.py  test_no_resource_leaks.py
passwd/: CHANGELOG.md  pyproject.toml
passwd/tests/functional/: test_passwd.py  test_version.py
passwd/tests/unit/: test_passwd.py  test_version.py  test_version_in_charm.py
pathops/: CHANGELOG.md  README.md  pyproject.toml
pathops/tests/unit/: test_container_path.py  test_local_path.py
rollingops/: CHANGELOG.md  README.md  pyproject.toml
rollingops/tests/functional/: test_version.py
rollingops/tests/integration/: conftest.py  shared_tests.py  test_etcd_rolling_ops.py  test_peer_rolling_ops.py  utils.py
rollingops/tests/integration/charms/: actions.yaml  common.py  pyproject.toml
rollingops/tests/integration/charms/k8s/: charmcraft.yaml
rollingops/tests/integration/charms/k8s/src/: charm.py
rollingops/tests/integration/charms/machine/: charmcraft.yaml
rollingops/tests/integration/charms/machine/src/: charm.py
rollingops/tests/unit/: conftest.py  test_certificates.py  test_common_models.py  test_etcd_certificates.py  test_etcd_etcdctl.py  test_etcd_models.py  test_etcd_rollingops_in_charm.py  test_etcdctl.py  test_models.py  test_peer_models.py  test_peer_rollingops_in_charm.py  test_version.py  test_version_in_charm.py
slo/: CHANGELOG.md  README.md  pyproject.toml
slo/tests/functional/: conftest.py
slo/tests/integration/: conftest.py  pack.sh  test_slo_integration.py
slo/tests/unit/: conftest.py  test_slo.py  test_version.py  test_version_in_charm.py
snap/: pyproject.toml
snap/tests/functional/: conftest.py  setup.sh  test_alive.py  test_client.py  test_functions.py  test_snap.py  test_snapd.py  test_snapd_aliases.py  test_snapd_apps.py  test_snapd_conf.py  test_snapd_interfaces.py  test_snapd_local.py  test_snapd_logs.py  test_snapd_snaps.py
snap/tests/unit/: conftest.py  test_client.py  test_errors.py  test_functions.py  test_snapd.py  test_snapd_logs.py  test_snapd_snaps.py
snap/tests/unit-old/: test_snap.py
sysctl/: pyproject.toml
sysctl/tests/functional/: test_sysctl.py  test_version.py
systemd/: pyproject.toml
uptime/: pyproject.toml
(+253 files in other folders)
