# common pyproject.toml file symlinked by these charms

[project]
name = "integration-test-charm"
version = "0.0.0.dev0"
description = "Charm for integration tests."
requires-python = ">=3.12"
dependencies = [
    "ops==3.*",
    "charmlibs-advanced-rollingops",
]

[tool.uv.sources]
"charmlibs-advanced-rollingops" = { path = "library", editable = true }
