# common pyproject.toml file symlinked by these charms

[project]
name = "integration-test-charm"
version = "0.0.0.dev0"
description = "Charm for integration tests."
requires-python = ">=3.12"
dependencies = [
    "ops==3.*",
    "charmlibs-rollingops",
    "charmlibs-apt",
]

[tool.uv.sources]
"charmlibs-rollingops" = { path = "library", editable = true }
